# VidSafe---Local-Video-Redaction-CLI

./: .gitignore  README.md  facebook_compliance.py  pyproject.toml
input/: .gitkeep
output/: .gitkeep
